[project]
name = "seed-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.15",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.8",
    "langgraph-cli[inmem]>=0.4.12",
    "markdownify>=1.2.2",
    "pydantic-settings>=2.13.1",
    "tavily>=1.1.0",
]
